@@ -25,5 +25,6 @@
 		<flag name="postgres">Use postgresql instead of sqlite</flag>
 		<flag name="seamonkey">Depend on seamonkey browser instead of firefox</flag>
 		<flag name="pngcrush">Use pngcrush for opimizing png before installation</flag>
+		<flag name="imagemagick">Use convert from graphicsmagick/imagemagick to scale pictures before installation</flag>
 	</use>
 </pkgmetadata>
