@@ -1,1 +1,1 @@
-DIST noscript-2.4.2.xpi 524264 RMD160 2c2a7ef8112ed32ddb20b18504fb2f775f7a74ba SHA1 940a1b7784074c47574e6368dab799b90c38607c SHA256 ad567b71bc04a69909f498ade09df4c0a0991d88302540f8e21072cba393f16b
+DIST noscript-2.4.3.xpi 524866 RMD160 a36533f29dac019a4ff3b4e34dae04f5816321b0 SHA1 c2ed3c55dc2fc59820f3836ca34cc455a2cc355f SHA256 0698f359fcccf45a4811ed578c574e9b407f6bbe5e75e921b5af7c7ff613872a
