@@ -4,6 +4,10 @@
 
 *magus-1.3.3 (28 May 2011)
 
+  28 May 2012; Martin Väth <martin@mvath.de>
+  Cleaner dependencies and messages for colliding USE-flags.
+  Rely on automagic eautopoint. Add support for optional imagemagick.
+
   17 May 2012; Martin Väth <martin@mvath.de>
   Remove REQUIRED_USE; default to firefox
 
